--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" href="data:image/ico;base64,aWNv">
-	<title>App</title>
+	<title>Basic-config</title>
 </head>
 <body>
   <div id="app"></div>
